@@ -8,6 +8,13 @@ NEW FEATURES:
  o The callr backend supports the handling of the standard output as
    implemented in future (>= 1.9.0).
 
+FIXES:
+
+ o Since the BatchJobs package is no longer maintained it is has not been
+   updated according to the new API of the DBI package. This caused several
+   warnings to be produced when using BatchJobs futures.  These warnings
+   are now suppressed (to avoid all the noice from these warnings).
+
 SOFTWARE QUALITY:
 
  o Removed internal workaround for BatchJobs (< 1.7).
